--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  go_router:
+  go_router: ^3.1.0
   molten_navigationbar_flutter: ^1.0.0
   flutter_riverpod: ^2.2.0
   google_fonts:
@@ -44,9 +44,10 @@ dependencies:
 
 dev_dependencies:
   freezed:
-  build_runner:
+  build_runner: ^2.0.0
   flutter_test:
     sdk: flutter
+  go_router_builder: ^1.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good codi
